--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body style="margin: 0; overflow: hidden;">
+        <a-scene device-orientation-permission-ui="enabled: false"></a-scene>
         <a-scene
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
@@ -34,7 +35,7 @@
                     gesture-handler
                 ></a-image>
             </a-marker>
-
+            
             <a-entity camera></a-entity>
         </a-scene>
     </body>
